I'm back to writing the thesis, starting with some minor spelling corrections.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -186,11 +186,11 @@ When an algorithmist encounters a problem, let's say ``How do I sort a list of i
 Of course this recipe is not stiff and some variations are possible. The two most popular ones would be:
 
 \begin{itemize}
-    \item The extremely practical, in which the specification and proof are dropped in favour of the test suite, the pseudocode is dropped in favour of the actual implementation, and the complexity analysis is only cursory and performed on the go during the design phase, in the algorithmist's head. This approach permeates comeptitive programming, because of the time pressure, and industry, because most ``algorithms'' there amount to unsophisticated data processing that doesn't need specification or proof.
+    \item The extremely practical, in which the specification and proof are dropped in favour of the test suite, the pseudocode is dropped in favour of the actual implementation, and the complexity analysis is only cursory and performed on the go during the design phase, in the algorithmist's head. This approach permeates competitive programming, because of the time pressure, and industry, because most ``algorithms'' there amount to unsophisticated data processing that doesn't need specification or proof.
     \item The extremely theoretical, in which there is no implementation and thus no tests and no performance assessment, and the most time-consuming part becomes the complexity analysis. This approach is widespread in teaching, where the implementation part is left to students as an exercise, and in theoretical research, where real-world applicability is not always the most important goal.
 \end{itemize}
 
-No matter the exact recipe, there is a very enlightening thing to be noticed, namely all the different worlds in which these activites take place. For example, the algorithm design process takes place in the algorithmist's mind, but after he's done, it is usually written down in some kind of comfortable pseudocode that allows skipping inessential detail. The actual implementation, in contrast, will be in some concrete programming language -- a very  popular one among algorithmists is \m{C++}.
+No matter the exact recipe, there is a very enlightening thing to be noticed, namely all the different worlds in which these activities take place. For example, the algorithm design process takes place in the algorithmist's mind, but after he's done, it is usually written down in some kind of comfortable pseudocode that allows skipping inessential detail. The actual implementation, in contrast, will be in some concrete programming language -- a very  popular one among algorithmists is \m{C++}.
 
 The specification and the proof are usually written in English (or whatever the language of the algorithmist), intermingled with some mathematical symbols for numbers, relations, sets and quantifiers, but that's only the surface view. If we take a closer look, it will most likely turn out that the mathematical part is based on classical first-order logic\footnote{By ``classical'' we mean that the logic admits nonconstructive reasoning principles like proof by contradiction \cite{ProofByContradiction} -- its use can be seen, for example, in proofs of optimality.} and some kind of naive set theory. When pressed a bit, however, the algorithmist will readily assert that the set theory could be axiomatized using, let's say, the Zermelo-Fraenkel axioms.
 
@@ -210,7 +210,7 @@ Even though the above many-worlds recipe and its variations work well in practic
 
 Each of these questions can be seen as pointing at a link between two worlds and each such link is a potential source of errors -- the worlds may not correspond too well. Because each pair of worlds can give rise to a potential mismatch, in theory there is a lot to worry about.
 
-We allowed ourselves to wander into this lengthy overview of the usual algorithmic business in order to contrast it with the approach of formally verified functional algorithms, which is an attempt at getting rid of potential world mismatch errors by transfering (nearly) all of the activities into a single, unified, formal world.
+We allowed ourselves to wander into this lengthy overview of the usual algorithmic business in order to contrast it with the approach of formally verified functional algorithms, which is an attempt at getting rid of potential world mismatch errors by transferring (nearly) all of the activities into a single, unified, formal world.
 
 \section{Formal verification as a world-collapser} \label{formal}
 
@@ -223,7 +223,7 @@ Applied to algorithms, Coq gives us numerous benefits. First, we no longer need 
 
 What we are left with are just three worlds instead of the six we had at the beginning: one for programming, proving and expressing high-level algorithmic ideas, one for the analysis (model of computation), and one for execution (hardware). Most of the links between activities now live in the first world and we can use the power of formal proofs to make sure there are no mismatches. We can prove that the algorithm satisfies the specification. If we decide to have more than one implementation (for example when we're looking for the most efficient one), we can prove they are equivalent. We can even prove that the specification is ``correct'', i.e. that the object it describes is unique. To sum up, we can avoid the various mismatches of previous section using formal proofs inside our unified world.
 
-But as long as not all worlds were collapsed into one, there is still some room for error. First, becuase Coq is implemented in OCaml, there is no guarantee that our formal proofs are absolutely correct. In fact, as can be seen from \url{https://github.com/coq/coq/blob/master/dev/doc/critical-bugs}, Coq has experienced about one critical bug per year. This means if we want absolute certainty in our proofs, we need to verify Coq's implementation by hand, so the world of informal math is still somewhat alive.
+But as long as not all worlds were collapsed into one, there is still some room for error. First, because Coq is implemented in OCaml, there is no guarantee that our formal proofs are absolutely correct. In fact, as can be seen from \url{https://github.com/coq/coq/blob/master/dev/doc/critical-bugs}, Coq has experienced about one critical bug per year. This means if we want absolute certainty in our proofs, we need to verify Coq's implementation by hand, so the world of informal math is still somewhat alive.
 
 The second point, related to the first, is that there is no guarantee the semantics of code executed by the hardware is the same as the semantics of the source code. There have been some attempts at formalizing various aspects of Coq in Coq \cite{CoqInCoq} \cite{CoqCoqCorrect} to this effect, but they have the status of exploratory research or work-in-progress. A more serious barrier that prevents us from ever fully formalizing Coq in Coq is G\"{o}del's incompleteness theorem.
 
@@ -255,7 +255,7 @@ Uniqueness rules, on the other hand, describe what happens when we first use an 
 
 The last thing to mention is how exactly contexts work and some of its consequences. First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$, for example $\type{}{\N}$ means that we can form the type $\N$ in the empty context. Second, if we have a context $\Gamma$ and in this context we can derive $\Gamma \vdash A$, then we can extend the context $\Gamma$ with a variable of this type, written $\Gamma, x : A$, provided that the name $x$ doesn't already occur in $\Gamma$.
 
-The most important consequence of this is that we need a notion of convertibility for types. Because types are formed in contexts, and contexts can contain assumptions of the form $x : A$, types can depend on terms. For example, for any natural number $n$ we can form the type $\Fin{n}$ that has exactly $n$ elements, formally written $\type{\Gamma, n : \N}{\Fin{n}}$. This raises the question: is the type $\Fin{2 + 2}$ the same as the type $\Fin{4}$? The answer is yes -- because $2 + 2$ and $4$ are converible, these types are also convertible, formally written $\typeconv{\Gamma}{\Fin{2 + 2}}{\Fin{4}}$. The rules that govern type convertibility aren't very interesting -- they say that convertibility is an equivalence relation and that dependent types are convertible whenever the terms they depend on are convertible.
+The most important consequence of this is that we need a notion of convertibility for types. Because types are formed in contexts, and contexts can contain assumptions of the form $x : A$, types can depend on terms. For example, for any natural number $n$ we can form the type $\Fin{n}$ that has exactly $n$ elements, formally written $\type{\Gamma, n : \N}{\Fin{n}}$. This raises the question: is the type $\Fin{2 + 2}$ the same as the type $\Fin{4}$? The answer is yes -- because $2 + 2$ and $4$ are convertible, these types are also convertible, formally written $\typeconv{\Gamma}{\Fin{2 + 2}}{\Fin{4}}$. The rules that govern type convertibility aren't very interesting -- they say that convertibility is an equivalence relation and that dependent types are convertible whenever the terms they depend on are convertible.
 
 An astute reader has probably noticed that we sneaked into the above description a word that is familiar but was not defined, namely ``element''. The elements of a type $A$ are its closed terms that are in normal form. A term is closed if its context is empty and it is in normal form if it is the final result of evaluation,\footnote{We leave the idea of evaluation informal and won't describe it in more detail.} i.e. it can't be evaluated any further.
 
@@ -267,7 +267,7 @@ The explanation of elements prompts us to change our perspective on type theory 
 
 Set theory has two basic kinds of objects -- propositions and sets -- living in two separate layers. Propositions live in the logical layer, which consists of first order classical logic, whereas sets live in the set-theoretical layer, which consists of set theory axioms. Type theory, on the other hand, has only one basic kind of objects, namely types, and only one layer -- the type layer. Both propositions and sets can in type theory be interpreted using types.
 
-In set theory, the membership predicate $x \in A$ is a proposition which can be proved or disproved. It is decidable internally, because of the law of excluded middle, but not externally, because there is no computer program that can tell us whether $x \in A$. In type theory, $x : A$ is not a proposition, but a judgement, which means one can establish that it holds, but it makes no sense to negate it. It neither makes sense to talk about it's internal decidability. However, it is externally decidable, which means there is a computer program that checks whether it holds.
+In set theory, the membership predicate $x \in A$ is a proposition which can be proved or disproved. It is decidable internally, because of the law of excluded middle, but not externally, because there is no computer program that can tell us whether $x \in A$. In type theory, $x : A$ is not a proposition, but a judgment, which means one can establish that it holds, but it makes no sense to negate it. It neither makes sense to talk about it's internal decidability. However, it is externally decidable, which means there is a computer program that checks whether it holds.
 
 In set theory, sets are semantic entities that need not, in general, be disjoint, so an element can belong to many sets. In type theory, types are syntactic entities that are always disjoint. Elements can belong to only one type, or, to be more precise, if an element belongs to two types, then these types are convertible.
 
@@ -360,10 +360,10 @@ Besides these shortcomings, there are also some other differences, which are mor
 
 \section{Outline of the thesis} \label{outline}
 
-Having given a thorough introduction, it should now be clear what we mean by ``formally verified functional algorithms and data structures in Coq''. In the remaining chpaters of the thesis we describe the actual concepts and techniques'', using well-known and well-studied examples like quicksort, merge sort or binary heaps. The rest of the thesis is structued as follows:
+Having given a thorough introduction, it should now be clear what we mean by ``formally verified functional algorithms and data structures in Coq''. In the remaining chapters of the thesis we describe the actual concepts and techniques'', using well-known and well-studied examples like quicksort, merge sort or binary heaps. The rest of the thesis is structured as follows:
 
 \begin{itemize}
-    \item In \hyperref{quicksort}{Chapter 2} we look at quicksort inside and out, describing the bulk of our approach.
+    \item In \hyperref[quicksort]{Chapter 2} we look at quicksort inside and out, describing the bulk of our approach.
     \item In chapter 3, ...
     \item TODO: put here the remaining chapters after they're written.
 \end{itemize}
